SLCORE-368 Migrate from PicoContainer to Spring IoC Framework